[Fixes #13932241 #13921339] Fix misaligned SAYT on program pages and mobile device
- Fix misaligned SAYT on /program and /searchusagov
- Fix misaligned SAYT on mobile device
- Fix incorrect hover color on web landing page (IE6)
- Fix incorrect search box on affiliate basic gray template (IE6)

--- a/app/stylesheets/affiliates/basic_gray.sass
+++ b/app/stylesheets/affiliates/basic_gray.sass
@@ -46,30 +46,6 @@ h1, h2, h3
     float: left
     margin-left: 10px
     margin-bottom: 15px
-
-    input[type=text]
-      font-family: "Times New Roman", Times, Georgia, serif
-      font-size: 24px
-      letter-spacing: 1px
-      color: #555
-      padding: 7px 10px
-      width: 525px
-    input[type=submit]
-      cursor: pointer
-      display: inline-block
-      margin-top: 4px
-      margin-left: 10px
-      vertical-align: top
-      color: #666
-      font-size: 20px
-      background: #EFEFEF
-      border: 1px solid #D3D3D3
-      height: 40px
-      width: 115px
-      border-radius: 5px
-      -moz-border-radius: 5px
-      -webkit-border-radius: 5px
-      text-shadow: #FFF 0px 1px 1px
     input[type=submit]:hover
       border: 1px solid #999
       background-color: #DDD
@@ -250,5 +226,27 @@ h1, h2, h3
 #search_form
   #search_query
     border: 1px solid #AAAAAA
-    :font-family verdana, verdana, sans-serif
+    float: left
+    display inline
+    font-family: verdana, verdana, sans-serif
+    font-size: 24px
     outline: 0
+    padding: 7px 10px
+    width: 525px
+  #search_button
+    cursor: pointer
+    float: left
+    display: inline
+    margin-top: 4px
+    margin-left: 10px
+    vertical-align: top
+    color: #666
+    font-size: 20px
+    background: #EFEFEF
+    border: 1px solid #D3D3D3
+    height: 40px
+    width: 115px
+    border-radius: 5px
+    -moz-border-radius: 5px
+    -webkit-border-radius: 5px
+    text-shadow: #FFF 0px 1px 1px
