--- a/app/stylesheets/affiliates/default.sass
+++ b/app/stylesheets/affiliates/default.sass
@@ -144,6 +144,7 @@ img
 
 #search_query
   border: 1px solid #AAAAAA
+  font: 11px verdana, verdana, sans-serif
   outline: 0
   padding: 2px 5px
   width: 335px
