--- a/app/stylesheets/new_main.sass
+++ b/app/stylesheets/new_main.sass
@@ -1136,8 +1136,12 @@ table.generic-table
     margin: 0
     input
       float: left
-    input[type=text]
+    #search_query
+      font-family: verdana, verdana, sans-serif
+      font-size: 14px
+      outline: 0
       margin: 0
+      padding: 5px
       width: 250px
     .search-button
       background: url(/images/btn_search.png) no-repeat 0 0
